# mikrotik-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  pyproject.toml
.github/workflows/: publish.yml
docs/: contributing.md
docs/getting-started/: installation.md  testing.md
docs/integrations/: README.md  claude-code.md  mcpo.md
