[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-mikrotik"
version = "0.1.14"
description = "MCP server for MikroTik integration with Claude and other AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jeff Nasseri", email = "sir.jeff.nasseri@gmail.com"}
]
keywords = ["mcp", "mikrotik", "router", "network", "ai", "assistant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp>=1.26.0",
    "paramiko>=4.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "starlette>=0.52.0",
]

[project.urls]
Homepage = "https://github.com/jeff-nasseri/mikrotik-mcp"
Issues = "https://github.com/jeff-nasseri/mikrotik-mcp/issues"
Repository = "https://github.com/jeff-nasseri/mikrotik-mcp"

[project.scripts]
mcp-server-mikrotik = "mcp_mikrotik.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mikrotik"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "testcontainers[compose]>=4.14.0",
    "PyYAML>=6.0.3",
]